# lab05

./: README.md
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_build/Testing/Temporary/: CTestCostData.txt
_build/banking/: Makefile  cmake_install.cmake
_build/tests/: CTestTestfile.cmake  Makefile  check  cmake_install.cmake
homework/: CMakeLists.txt
homework/banking/: CMakeLists.txt
homework/tests/: CMakeLists.txt  test_account.cpp  test_transaction.cpp
